--- a/master/engine.cfg
+++ b/master/engine.cfg
@@ -1,18 +1,31 @@
 [application]
 
 name="Spookz"
-main_scene="res://_src/Battle/Battle.tscn"
+main_scene="res://_src/World/World.tscn"
 icon="res://icon.png"
+
+[autoload]
+
+TAnimation="*res://_src/World/TAnimation.tscn"
+Global="*res://Global.gd"
 
 [display]
 
-emulate_touchscreen=true
+width=704
+orientation="sensor_portrait"
+stretch_aspect="keep"
+height=1280
 stretch_mode="2d"
-width=1280
-height=720
+emulate_touchscreen=true
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
 
 [input]
 
+_TEXT=[mbutton(0, 1)]
 A=[key(Return)]
 B=[key(Escape)]
 up=[key(W)]
